<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="100dp"
                android:layout_gravity="center"
                android:id="@+id/upload_image"
                android:layout_margin="8dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_launcher_background"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:text="@string/str_upload_your_image"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_margin="8dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="6dp"
                    android:src="@drawable/ic_android_black_24dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp" />
                <EditText
                    android:layout_width="250dp"
                    android:id="@+id/user_name"
                    android:layout_height="wrap_content"
                    android:hint="@string/src_your_name"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_margin="8dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="6dp"
                    android:src="@drawable/ic_android_black_24dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp" />
                <EditText
                    android:layout_width="250dp"
                    android:id="@+id/user_contact"
                    android:inputType="number"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_contact_number"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_margin="8dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="6dp"
                    android:src="@drawable/ic_android_black_24dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp" />
                <EditText
                    android:layout_width="250dp"
                    android:id="@+id/user_email"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_email_address"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_margin="8dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="6dp"
                    android:src="@drawable/ic_android_black_24dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp" />
                <EditText
                    android:layout_width="250dp"
                    android:id="@+id/user_password"
                    android:layout_height="wrap_content"
                    android:hint="@string/passsword"/>
            </LinearLayout>
            <Button
                android:layout_width="200dp"
                android:id="@+id/button_signup"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"/>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>